<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_favouries"
        android:title="@string/action_favorite"
        app:showAsAction="always"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never">

    </item>
    <item android:id="@+id/action_contact"
        android:icon="@drawable/ic_action_contact"
        android:title="@string/action_contact"
        app:showAsAction="always">
    </item>
    <item android:id="@+id/action_order"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/action_order"
        app:showAsAction="always">
    </item>

</menu>